wip on ux for sampling confirmation
